--- a/springboot-threadpool/pom.xml
+++ b/springboot-threadpool/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 </project>
