--- a/springboot-redis/pom.xml
+++ b/springboot-redis/pom.xml
@@ -21,5 +21,15 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.18.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 </project>
