--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>springboot-swagger</module>
         <module>springboot-clickhouse</module>
         <module>springcloud-gateway</module>
+        <module>springboot-elasticsearch</module>
+        <module>spring-boot-threadpool-starter</module>
+        <module>springboot-customer-starter</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -25,7 +28,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.springboot</groupId>
-    <artifactId>springboot-module</artifactId>
+    <artifactId>springboot-project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencyManagement>
         <dependencies>
