--- a/springboot-docker/pom.xml
+++ b/springboot-docker/pom.xml
@@ -18,54 +18,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-<!--        <docker.image.prefix>itender</docker.image.prefix>-->
     </properties>
 
     <build>
-        <!-- 固定的jar的名字，这样Dockerfile可以固定写 -->
-        <finalName>springboot-docker</finalName>
-        <!-- 构建的插件 -->
         <plugins>
-            <!-- springboot构建jar -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <!-- 构建docker镜像 -->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.2.2</version>
                 <executions>
                     <execution>
-                        <id>build-image</id>
-                        <phase>package</phase>
                         <goals>
-                            <goal>build</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <!-- image 的名字 -->
-                    <imageName>${project.build.finalName}</imageName>
-                    <!-- image 的tag, 可以是多个 -->
-                    <imageTags>
-                        <imageTag>latest</imageTag>
-                        <imageTag>${project.version}</imageTag>
-                    </imageTags>
-                    <!-- Dockerfile所在的目录 -->
-                    <dockerDirectory>${project.basedir}</dockerDirectory>
-                    <!-- 复制jar到docker的位置 -->
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <!--jar 包所在的路径，对应target目录-->
-                            <directory>${project.build.directory}</directory>
-                            <!-- 包含的jar　-->
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                </configuration>
             </plugin>
         </plugins>
     </build>
