feat: springboot整合starrocks代码初始化

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>springboot-elasticsearch</module>
         <module>spring-boot-threadpool-starter</module>
         <module>springboot-customer-starter</module>
+        <module>springboot-starrocks</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
