--- a/springboot-elasticsearch/pom.xml
+++ b/springboot-elasticsearch/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
-        <relativePath/>
+        <artifactId>springboot-project</artifactId>
+        <groupId>com.springboot</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.itender.elasticsearch</groupId>
-    <artifactId>elasticsearch</artifactId>
+    <artifactId>springboot-elasticsearch</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
