feat: 代码改动提交

--- a/springboot-mybatis/src/main/resources/application.yml
+++ b/springboot-mybatis/src/main/resources/application.yml
@@ -75,4 +75,4 @@ spring:
 #      maxOpenPreparedStatements: 20
 logging:
   level:
-    com.itender.mybatis.mapper: debug
+    com.itender.analytics.common.mapper: debug
