--- a/springboot-easyexcel/src/main/resources/application.yml
+++ b/springboot-easyexcel/src/main/resources/application.yml
@@ -3,19 +3,19 @@ server:
 spring:
   application:
     name: easyexcelService
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 172.31.25.125:8848
-        cluster-name: HZ # 杭州集群
-        namespace: 58eed6a7-7fe3-4585-88cd-5223d1924a20   # dev环境
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 172.31.25.125:8848
+#        cluster-name: HZ # 杭州集群
+#        namespace: 58eed6a7-7fe3-4585-88cd-5223d1924a20   # dev环境
   datasource:
     dynamic:
       primary: master #设置默认的数据源或者数据源组,默认值即为master
       strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         master:
-          url: jdbc:mysql://localhost:3306/demo_01?useSSL=false&autoReconnect=true&characterEncoding=utf8
+          url: jdbc:mysql://localhost:3306/test?useSSL=false&autoReconnect=true&characterEncoding=utf8
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver # 3.2.0开始支持SPI可省略此配置
