--- a/springboot-threadpool/src/main/resources/application.yml
+++ b/springboot-threadpool/src/main/resources/application.yml
@@ -15,12 +15,12 @@ spring:
       strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         master:
-          url: jdbc:mysql://localhost:3306/demo_01?useSSL=false&autoReconnect=true&characterEncoding=utf8
+          url: jdbc:mysql://localhost:3306/demo_01?userUnicode=true&&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver # 3.2.0开始支持SPI可省略此配置
         slave:
-          url: jdbc:mysql://172.31.25.125:3306/dynamic?useSSL=false&autoReconnect=true&characterEncoding=utf8
+          url: jdbc:mysql://172.31.25.125:3306/dynamic?userUnicode=true&&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver
