--- a/springboot-easyexcel/pom.xml
+++ b/springboot-easyexcel/pom.xml
@@ -11,6 +11,11 @@
 
     <artifactId>springboot-easyexcel</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>com.springboot</groupId>
+            <artifactId>springboot-mybatis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 使用Apache HttpClient替换Feign原生httpURLConnection -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
